--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -3,11 +3,12 @@
         <div class="row">
 
 
-<div class="col-md-12">
-    <app-navbar></app-navbar>
+            <div class="col-md-12">
+                <!-- <app-navbar></app-navbar> -->
+                <app-adminnavbar></app-adminnavbar>
 
-<!-- <router-outlet></router-outlet> -->
-</div>
+                <!-- <router-outlet></router-outlet> -->
+            </div>
 
 
         </div>
