--- a/src/app/pages/admin/view-categories/view-categories.component.html
+++ b/src/app/pages/admin/view-categories/view-categories.component.html
@@ -1,127 +1,150 @@
-<mat-card>
-
-  <mat-list>
-    <div mat-subheader>
-      <h1> All Course</h1>
+<!-- Course List Card -->
+<mat-card class="elevated-card">
+  <mat-card-header class="card-header">
+    <div class="header-content">
+      <mat-icon class="header-icon">school</mat-icon>
+      <h1 class="card-title">All Courses</h1>
+      <span class="flex-spacer"></span>
+      <button mat-raised-button color="primary" routerLink="/admin/add-category" class="add-course-btn">
+        <mat-icon>add</mat-icon>
+        Add New Course
+      </button>
     </div>
+  </mat-card-header>
 
-    <div *ngIf="categories.length > 0; else elseBlock">
-      <table class="datatable">
-        <thead>
-          <tr>
-            <th>Course Code</th>
-            <th>Course Name</th>
-            <th>Action</th>
+  <mat-divider></mat-divider>
 
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let c of categories; let i=index; let odd = odd" [ngClass]="odd ? 'odd_col' : 'even_col'">
-            <td>{{ c.courseCode}}</td>
-            <td>{{ c.title }}</td>
+  <mat-card-content>
+    <div *ngIf="categories.length > 0; else emptyState" class="table-container">
+      <table mat-table [dataSource]="categories" class="elegant-table mat-elevation-z2">
+        
+        <!-- Course Code Column -->
+        <ng-container matColumnDef="courseCode">
+          <th mat-header-cell *matHeaderCellDef>COURSE CODE</th>
+          <td mat-cell *matCellDef="let element" class="code-cell">
+            <mat-icon class="cell-icon">code</mat-icon>
+            {{element.courseCode}}
+          </td>
+        </ng-container>
 
-            <td>
+        <!-- Course Name Column -->
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>COURSE NAME</th>
+          <td mat-cell *matCellDef="let element" class="name-cell">
+            <mat-icon class="cell-icon">menu_book</mat-icon>
+            {{element.title}}
+          </td>
+        </ng-container>
 
+        <!-- Level Column -->
+        <ng-container matColumnDef="level">
+          <th mat-header-cell *matHeaderCellDef>LEVEL</th>
+          <td mat-cell *matCellDef="let element" class="level-cell">
+            <mat-chip-list>
+              <mat-chip [ngClass]="'level-' + element.level.split(' ')[1]">
+                {{element.level}}
+              </mat-chip>
+            </mat-chip-list>
+          </td>
+        </ng-container>
 
-              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                <mat-icon>more_vert</mat-icon>
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="actions-header">ACTIONS</th>
+          <td mat-cell *matCellDef="let element" class="actions-cell">
+            <button mat-icon-button [matMenuTriggerFor]="actionMenu" class="action-btn">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+
+            <mat-menu #actionMenu="matMenu" class="action-menu">
+              <button mat-menu-item (click)="openUpdateObjDialog(element.cid, updateDialogCategory)" class="menu-item">
+                <mat-icon class="menu-icon">edit</mat-icon>
+                <span>Edit Course</span>
               </button>
-
-              <mat-menu #menu="matMenu">
-
-
-
-                <!-- <button mat-menu-item [routerLink]="'/admin/update-category/'+ c.cid">
-                  <mat-icon color="accent">update</mat-icon>
-                  <span> Update
-                  </span>
-                </button> -->
-
-                <button mat-menu-item color="primary"
-                (click)="openUpdateObjDialog(c.cid, updateDialogCategory)">
-                <mat-icon color="accent">update</mat-icon>
-                <span> Update
-                </span>
+              <mat-divider></mat-divider>
+              <button mat-menu-item (click)="deleteCategor(element.cid)" class="menu-item delete-item">
+                <mat-icon class="menu-icon">delete</mat-icon>
+                <span>Delete</span>
               </button>
+            </mat-menu>
+          </td>
+        </ng-container>
 
-
-
-
-
-
-
-                <button mat-menu-item (click)="deleteCategor(c.cid)">
-                  <mat-icon color="accent">delete</mat-icon>
-                  <span> Delete
-                  </span>
-                </button>
-              </mat-menu>
-
-            </td>
-
-          </tr>
-        </tbody>
+        <tr mat-header-row *matHeaderRowDef="['courseCode', 'title', 'level', 'actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['courseCode', 'title', 'level', 'actions'];" 
+            [ngClass]="{'row-hover': true}"></tr>
       </table>
     </div>
-    <ng-template #elseBlock>No Course Available</ng-template>
 
-  </mat-list>
-  <div class="container text-center">
-    <button mat-raised-button color="accent" routerLink="/admin/add-category"> Add New Course</button>
-  </div>
+    <ng-template #emptyState>
+      <div class="empty-state">
+        <mat-icon class="empty-icon">folder_off</mat-icon>
+        <h3>No Courses Available</h3>
+        <p>Get started by adding your first course</p>
+        <button mat-raised-button color="primary" routerLink="/admin/add-category" class="empty-action-btn">
+          <mat-icon>add</mat-icon>
+          Create Course
+        </button>
+      </div>
+    </ng-template>
+  </mat-card-content>
 </mat-card>
 
-
-
-
-<!-- POP UP DIALOG BOX FOR EDIT -->
+<!-- Edit Course Dialog -->
 <ng-template #updateDialogCategory let-data="data">
-  <h1 mat-dialog-title>Update Category</h1>
+  <div class="dialog-container">
+    <div class="dialog-header">
+      <mat-icon class="dialog-icon">edit_note</mat-icon>
+      <h1 mat-dialog-title>Update Course Details</h1>
+    </div>
 
-  <div mat-dialog-content>  
-      <!-- {{category | json}} -->
-      <mat-card-content>
-          <div class="bootstrap-wrapper">
-              <div class="row">
-                  <div class="col-md-8 offset-md-2">
-                      <!-- <form *ngIf="category" (ngSubmit)="updateCategoryData()"> -->
-                          <mat-label>Course Title:</mat-label>
-                          <mat-form-field class="w100" appearance="outline">
-                              <input [(ngModel)]="categoryEdit.title" type="text" name="title" matInput>
-                          </mat-form-field>
-                          <mat-label>Course Code:</mat-label>
-                          <mat-form-field class="w100" appearance="outline">
-                              <input [(ngModel)]="categoryEdit.courseCode" type="text" name="courseCode" matInput>
-                          </mat-form-field>
-                            <mat-label>Level:</mat-label>
-                          <mat-form-field class="w100" appearance="outline">
-                              <mat-label>Select Level:</mat-label>
-  
-                              <mat-select name="level" [(ngModel)]="categoryEdit.level">
-                                  <mat-option [value]="'Level 100'">Level 100</mat-option>
-                                  <mat-option [value]="'Level 200'">Level 200</mat-option>         
-                                  <mat-option [value]="'Level 300'">Level 300</mat-option>
-                                  <mat-option [value]="'Level 400'">Level 400</mat-option>
-                                  
-                              </mat-select>
-                          </mat-form-field>
-                          <mat-label>Description</mat-label>
-                          <mat-form-field class="w100" appearance="outline">
-                              <textarea [(ngModel)]="categoryEdit.description" rows="10" name="description" matInput>
-                          </textarea>
-                          </mat-form-field>
-                          <!-- <div class="container text-center mt15">
-                              <button mat-raised-button color="accent" type="submit">Update</button>
-                          </div> -->
-                      <!-- </form> -->
-                  </div>
-              </div>
-          </div>
-      </mat-card-content>
-  </div>
+    <mat-divider></mat-divider>
 
-  <div mat-dialog-actions>
-    <button mat-button (click)="dialogRef.close()">Cancel</button>
-    <button mat-button (click)="updateCategoryData()">Update</button>
+    <div mat-dialog-content class="dialog-content">
+      <form class="course-form">
+        <div class="form-row">
+          <mat-form-field appearance="outline" floatLabel="always">
+            <mat-label>Course Title</mat-label>
+            <input matInput [(ngModel)]="categoryEdit.title" name="title" required>
+            <mat-icon matSuffix>title</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" floatLabel="always">
+            <mat-label>Course Code</mat-label>
+            <input matInput [(ngModel)]="categoryEdit.courseCode" name="courseCode" required>
+            <mat-icon matSuffix>code</mat-icon>
+          </mat-form-field>
+        </div>
+
+        <mat-form-field appearance="outline" floatLabel="always">
+          <mat-label>Academic Level</mat-label>
+          <mat-select [(ngModel)]="categoryEdit.level" name="level" required>
+            <mat-option *ngFor="let level of ['Level 100', 'Level 200', 'Level 300', 'Level 400']" [value]="level">
+              <span class="level-option">{{level}}</span>
+            </mat-option>
+          </mat-select>
+          <mat-icon matSuffix>school</mat-icon>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" floatLabel="always">
+          <mat-label>Course Description</mat-label>
+          <textarea matInput [(ngModel)]="categoryEdit.description" name="description" rows="5"></textarea>
+          <mat-icon matSuffix>description</mat-icon>
+        </mat-form-field>
+      </form>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div mat-dialog-actions class="dialog-actions">
+      <button mat-button (click)="dialogRef.close()" class="cancel-btn">
+        <mat-icon>close</mat-icon>
+        Cancel
+      </button>
+      <button mat-raised-button color="primary" (click)="updateCategoryData()" class="save-btn">
+        <mat-icon>save</mat-icon>
+        Save Changes
+      </button>
+    </div>
   </div>
 </ng-template>
