--- a/src/app/pages/admin/view-quizzes/view-quizzes.component.html
+++ b/src/app/pages/admin/view-quizzes/view-quizzes.component.html
@@ -1,176 +1,177 @@
-<mat-card class="mt20" *ngFor="let q of quizzes">
+<!-- Quiz List Section -->
+<div class="quiz-dashboard">
+  <div class="dashboard-header">
+    <h1 class="dashboard-title">
+      <mat-icon>quiz</mat-icon>
+      Quiz Management
+    </h1>
+    <button mat-raised-button color="primary" routerLink="/admin/add-quiz" class="add-quiz-btn">
+      <mat-icon>add</mat-icon>
+      Add New Quiz
+    </button>
+  </div>
 
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>
-            {{q.title}}
-        </mat-card-title>
-
-        <mat-card-subtitle>
-            {{q.category.title}}
+  <div class="quiz-grid">
+    <!-- Quiz Card -->
+    <mat-card *ngFor="let q of quizzes" class="quiz-card mat-elevation-z4">
+      <mat-card-header>
+        <div mat-card-avatar class="quiz-avatar">
+          <mat-icon>assignment</mat-icon>
+        </div>
+        <mat-card-title class="quiz-title">{{q.title}}</mat-card-title>
+        <mat-card-subtitle class="quiz-category">
+          <mat-icon class="category-icon">category</mat-icon>
+          {{q.category.title}}
         </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        <p>{{q.description}}</p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button [routerLink]="'/admin/view-quetions/'+q.qId+'/'+q.title" mat-flat-button
-            color="accent">Questions</button>
-        <button mat-stroked-button color="accent" class="ml20">Max Marks: {{q.maxMarks}}</button>
-        <button mat-stroked-button color="accent" class="ml20">Questions: {{q.numberOfQuestions}}</button>
-        <!-- <button mat-flat-button color="accent" class="ml20" [routerLink]="'/admin/update-quiz/'+ q.qId ">Update</button> -->
+      </mat-card-header>
 
-        <button mat-flat-button color="accent" (click)="openUpdateDialog(q.qId, updateObj)"> Update Quiz
+      <mat-divider></mat-divider>
+
+      <mat-card-content class="quiz-content">
+        <p class="quiz-description">{{q.description || 'No description provided'}}</p>
+        
+        <div class="quiz-meta">
+          <div class="meta-item">
+            <mat-icon>score</mat-icon>
+            <span>Max Marks: {{q.maxMarks}}</span>
+          </div>
+          <div class="meta-item">
+            <mat-icon>help_outline</mat-icon>
+            <span>Questions: {{q.numberOfQuestions}}</span>
+          </div>
+        </div>
+      </mat-card-content>
+
+      <mat-divider></mat-divider>
+
+      <mat-card-actions class="quiz-actions">
+        <button mat-button color="primary" [routerLink]="'/admin/view-quetions/'+q.qId+'/'+q.title" class="action-btn">
+          <mat-icon>question_answer</mat-icon>
+          Questions
         </button>
 
-        <!-- <button mat-flat-button color="accent" class="ml20">Attempts</button> -->
-        <button mat-flat-button color="warn" class="ml20" (click)="deleteQuiz(q.qId)">Delete</button>
+        <button mat-button color="accent" (click)="openUpdateDialog(q.qId, updateObj)" class="action-btn">
+          <mat-icon>edit</mat-icon>
+          Edit
+        </button>
 
+        <button mat-button color="warn" (click)="deleteQuiz(q.qId)" class="action-btn">
+          <mat-icon>delete</mat-icon>
+          Delete
+        </button>
 
+        <div class="status-control">
+          <mat-form-field appearance="outline" class="status-select">
+            <mat-label>Status</mat-label>
+            <mat-select [(value)]="q.selectedStatus">
+              <mat-option value="CLOSED">
+                <mat-icon>lock</mat-icon>
+                Closed
+              </mat-option>
+              <mat-option value="OPEN">
+                <mat-icon>lock_open</mat-icon>
+                Open
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-
-<!-- Status dropdown -->
-  <mat-form-field class="ml20">
-    <mat-label>Quiz Status</mat-label>
-    <mat-select [(value)]="q.selectedStatus">
-      <mat-option value="CLOSED">CLOSE</mat-option>
-      <mat-option value="OPEN">OPEN</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <!-- Update button -->
-  <button mat-flat-button color="warn" class="ml20"
-          [disabled]="q.updating || !q.selectedStatus"
-          (click)="updateQuizStatus(q)">
-    {{ q.updating ? 'Updating...' : 'Update' }}
-  </button>
-
-
-    </mat-card-actions>
-</mat-card>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- POP UP DIALOG BOX TO EIDT OBJECTIVE QUESTIONS -->
-<ng-template #updateObj let-data="data">
-    <h1 mat-dialog-title>Update Quiz</h1>
-    <div mat-dialog-content>
-
-        <!-- <mat-card> -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Enter Quiz Title</mat-label>
-                        <input [(ngModel)]="quizById.title" type="text" name="title" matInput required>
-                    </mat-form-field>
-                </div>
-                <div class="col-md-6">
-
-                    <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Quiz Description</mat-label>
-                        <textarea [(ngModel)]="quizById.description" type="text" name="description" matInput
-                            rows="8"> </textarea>
-                    </mat-form-field>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Maximum Marks</mat-label>
-                        <input [(ngModel)]="quizById.maxMarks" type="maxMarks" name="maxMarks" matInput>
-                    </mat-form-field>
-                </div>
-
-                <div class="col-md-6">
-                    <!-- Number of questions to be displayed -->
-                    <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Total questions</mat-label>
-                        <input [(ngModel)]="quizById.numberOfQuestions" type="numberOfQuestions"
-                            name="numberOfQuestions" matInput>
-                    </mat-form-field>
-
-                </div>
-            </div>
-            <!-- EDIT QUIZ PASSWORD AND QUIZ TIME-->
-
-            <div class="row">
-                <div class="col-md-6">
-                    <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Quiz Password</mat-label>
-                        <input [(ngModel)]="quizById.quizpassword" type="quizPassword" name="quizpassword" matInput>
-                    </mat-form-field>
-                </div>
-
-                <div class="col-md-6">
-                    <!-- Number of questions to be displayed -->
-                    <mat-form-field class="w100" appearance="fill">
-                        <mat-label>Quiz Time</mat-label>
-                        <input [(ngModel)]="quizById.quizTime" type="quizTime" name="quizTime" matInput>
-                    </mat-form-field>
-
-                </div>
-            </div>
-
-            <mat-slide-toggle name="active" [(ngModel)]="quizById.active" class="mb20"> Publish
-                Status</mat-slide-toggle>
-            <br />
-            <mat-form-field appearance="fill" class="mt20 w100">
-                <mat-label>Select Category</mat-label>
-                <mat-select name="category" [(ngModel)]="quizById.category.cid">
-                    <mat-option *ngFor="let c of categories" [value]="c.cid">
-                        {{c.title}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+          <button mat-flat-button 
+                  [color]="q.selectedStatus === 'OPEN' ? 'primary' : 'warn'" 
+                  [disabled]="q.updating || !q.selectedStatus"
+                  (click)="updateQuizStatus(q)"
+                  class="status-btn">
+            <mat-icon *ngIf="!q.updating">sync</mat-icon>
+            <mat-spinner *ngIf="q.updating" diameter="20"></mat-spinner>
+            {{ q.updating ? 'Updating...' : 'Update' }}
+          </button>
         </div>
-        <!-- </mat-card> -->
-        <div mat-dialog-actions>
-            <button mat-button (click)="dialogRef.close()">Cancel</button>
-            <button mat-button (click)="updateData()">Update</button>
-        </div>
-    </div>
-</ng-template>
-
-
-<div class="container text-center mt20">
-    <button mat-raised-button color="accent" routerLink="/admin/add-quiz">Add New Quiz</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
+
+<!-- Update Quiz Dialog -->
+<ng-template #updateObj let-data="data">
+  <div class="dialog-container">
+    <div class="dialog-header">
+      <mat-icon>edit_note</mat-icon>
+      <h1 mat-dialog-title>Update Quiz Details</h1>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div mat-dialog-content class="dialog-content">
+      <form class="quiz-form">
+        <div class="form-row">
+          <mat-form-field appearance="outline">
+            <mat-label>Quiz Title</mat-label>
+            <input matInput [(ngModel)]="quizById.title" name="title" required>
+            <mat-icon matSuffix>title</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Category</mat-label>
+            <mat-select name="category" [(ngModel)]="quizById.category.cid" required>
+              <mat-option *ngFor="let c of categories" [value]="c.cid">
+                {{c.title}}
+              </mat-option>
+            </mat-select>
+            <mat-icon matSuffix>category</mat-icon>
+          </mat-form-field>
+        </div>
+
+        <mat-form-field appearance="outline" class="full-width">
+          <mat-label>Description</mat-label>
+          <textarea matInput [(ngModel)]="quizById.description" name="description" rows="4"></textarea>
+          <mat-icon matSuffix>description</mat-icon>
+        </mat-form-field>
+
+        <div class="form-row">
+          <mat-form-field appearance="outline">
+            <mat-label>Max Marks</mat-label>
+            <input matInput type="number" [(ngModel)]="quizById.maxMarks" name="maxMarks">
+            <mat-icon matSuffix>score</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Total Questions</mat-label>
+            <input matInput type="number" [(ngModel)]="quizById.numberOfQuestions" name="numberOfQuestions">
+            <mat-icon matSuffix>help_outline</mat-icon>
+          </mat-form-field>
+        </div>
+
+        <div class="form-row">
+          <mat-form-field appearance="outline">
+            <mat-label>Quiz Password</mat-label>
+            <input matInput [(ngModel)]="quizById.quizpassword" name="quizpassword" type="password">
+            <mat-icon matSuffix>vpn_key</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Quiz Time (minutes)</mat-label>
+            <input matInput type="number" [(ngModel)]="quizById.quizTime" name="quizTime">
+            <mat-icon matSuffix>timer</mat-icon>
+          </mat-form-field>
+        </div>
+
+        <mat-slide-toggle [(ngModel)]="quizById.active" name="active" color="primary" class="publish-toggle">
+          <mat-icon>{{quizById.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+          {{quizById.active ? 'Published' : 'Unpublished'}}
+        </mat-slide-toggle>
+      </form>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div mat-dialog-actions class="dialog-actions">
+      <button mat-stroked-button (click)="dialogRef.close()">
+        <mat-icon>close</mat-icon>
+        Cancel
+      </button>
+      <button mat-raised-button color="primary" (click)="updateData()">
+        <mat-icon>save</mat-icon>
+        Save Changes
+      </button>
+    </div>
+  </div>
+</ng-template>
